--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -3,7 +3,7 @@
     padding-top: calc(1.5vw + 90px);
 
     .main-part {
-        margin-top: 50px;
+        // margin-top: 50px;
         display: flex;
         flex-direction: row;
         column-gap: 10px;
@@ -94,10 +94,83 @@
         padding-right: 20px;
     }
 
+    .panel-right {
+        border-radius: 15px;
+        background-color: #222222;
+        padding-top: 30px;
+        padding-bottom: 50px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+        align-items: flex-start;
+        width: 100%;
+        min-height: 300px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
     .selectedImg {
         width: 100px !important;
         border-radius: 7px;
         margin: 10px;
+    }
+
+    .nft-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 11px;
+        color: grey;
+        width: 150px;
+        margin: 10px;
+        box-shadow: 0px 0px 10px 2px white;
+        border-radius: 10px;
+        object-fit: fill;
+
+        img {
+            width: auto;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+
+        .select {
+            width: 100%;
+            margin-top: 5%;
+            background-color: grey;
+            color: white;
+            border-width: 0px;
+            height: 40px;
+            border-radius: 5px;
+            font-family: monument !important;
+        }
+
+        .nft-col {
+            display: flex;
+            flex-direction: column;
+            background-color: grey;
+            color: white;
+            border-radius: 5px;
+            padding: 5px;
+            margin-top: 10px;
+        }
+    }
+
+    /**
+    stake
+    */
+    .profile-button {
+        // width: 100%;
+        width: 200px;
+        background-color: grey;
+        color: white;
+        border-width: 0px;
+        border-radius: 10px;
+        height: 35px;
+        font-family: monument !important;
+        // margin: 5%;
+        margin-top: 20px;
+        font-size: 10px;
     }
 
 }
