landing-page complete

--- a/src/scss/Common.scss
+++ b/src/scss/Common.scss
@@ -127,6 +127,10 @@
     justify-content: flex-end;
 }
 
+.j-center {
+    justify-content: center;
+}
+
 .col {
     display: flex;
     flex-direction: column;
