--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -13,5 +13,7 @@
         flex-direction: column;
         justify-content: center;
         row-gap: 30px;
+        align-items: center;
+        justify-content: center;
     }
 }
