--- a/src/scss/Welcome.scss
+++ b/src/scss/Welcome.scss
@@ -1,7 +1,170 @@
-.sec1 {
-    padding: 1.2vw;
-    font-size: 18px;
-    line-height: 35px;
-    background-color: #1e1e1e;
-    border-radius: 10px;
+.welcome {
+    .section {
+        display: flex;
+        flex-direction: column;
+        padding: 2vw;
+        font-size: 20px;
+        line-height: 32px;
+        row-gap: 20px;
+        background-color: #0e0e0e;
+        border-radius: 7px;
+        margin-top: 50px;
+        border: 0px solid white;
+    }
+
+    .section1 {
+        display: flex;
+        flex-direction: column;
+        padding: 4vw;
+        font-size: 20px;
+        line-height: 32px;
+        row-gap: 20px;
+        margin-top: 20px;
+    }
+
+    .group {
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+        font-size: 12px;
+        line-height: 16px;
+        align-items: center;
+        justify-content: space-between;
+        height: 420px;
+
+        img {
+            width: 30px;
+        }
+
+        .ele1 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 250px;
+            row-gap: 20px;
+
+            img {
+                width: 200px;
+            }
+
+            .item {
+                padding: 5px 15px;
+                background-color: #242424;
+                border-radius: 5px;
+            }
+        }
+    }
+
+    .market-button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+        background-color: #222222;
+        column-gap: 10px;
+        font-family: monument;
+        font-size: 16px;
+        border: 0px solid white;
+        height: 60px;
+        width: 220px;
+        color: white;
+
+        img {
+            width: 30px;
+        }
+    }
+
+    .roadmap {
+
+        img {
+            width: 100%;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+    }
+
+    .utilities {
+
+        button {
+            font-size: 16px;
+            font-family: monument;
+            padding: 20px 30px;
+            background-color: #222222;
+            border-radius: 5px;
+            border: 0px solid white;
+            color: white
+        }
+
+        .logo {
+            width: 30px;
+        }
+    }
+
+    .perscription {
+        img {
+            width: 500px;
+
+            @media (max-width: 760px) {
+                width: 80%;
+            }
+        }
+    }
+
+    .transformation {
+        img {
+            width: 600px;
+
+            @media (max-width: 760px) {
+                width: 80%;
+            }
+        }
+    }
+
+    .reroll {
+        img {
+            width: 600px;
+
+            @media (max-width: 760px) {
+                width: 80%;
+            }
+        }
+    }
+
+    .producer {
+        button {
+            padding: 10px 20px;
+            font-family: monument;
+            color: white;
+            font-size: 16px;
+            background-color: #222222;
+            border: 0px solid white;
+            border-radius: 7px;
+            width: 200px;
+        }
+    }
+
+    .musicgroup {
+        button {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: red;
+            border: 0px solid white;
+            border-radius: 7px;
+            font-size: 14px;
+            font-family: monument;
+            width: 300px;
+            // height: 50px;
+            padding-top: 10px;
+            padding-bottom: 5px;
+
+            color: white;
+
+            img {
+                width: 30px;
+            }
+        }
+    }
 }
