--- a/src/scss/Common.scss
+++ b/src/scss/Common.scss
@@ -315,10 +315,18 @@
 
 .f-14 {
     font-size: 14px;
+
+    @media (max-width: 767px) {
+        font-size: 12px;
+    }
 }
 
 .f-16 {
     font-size: 16px;
+
+    @media (max-width: 767px) {
+        font-size: 14px;
+    }
 }
 
 .f-18 {
@@ -327,6 +335,7 @@
 
 .f-20 {
     font-size: 20px;
+
 }
 
 .f-24 {
@@ -335,10 +344,18 @@
 
 .f-28 {
     font-size: 28px;
+
+    @media (max-width: 767px) {
+        font-size: 20px;
+    }
 }
 
 .f-32 {
     font-size: 32px;
+
+    @media (max-width: 767px) {
+        font-size: 27px;
+    }
 }
 
 .f-36 {
@@ -1214,6 +1231,11 @@
     margin-left: -0.5em;
     margin-right: -0.5em;
     row-gap: 20px;
+}
+
+img {
+    width: 100%;
+    max-height: 100%;
 }
 
 .col-4 {
