--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -1,12 +1,13 @@
 .footer {
+    margin-top: 50px;
     padding: 2vw 8vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
 
     img {
-        width: 100px;
+        width: 25px;
     }
 
     @media (max-width: 600px) {
@@ -15,5 +16,23 @@
         row-gap: 30px;
         align-items: center;
         justify-content: center;
+    }
+
+    .logo {
+        width: 50px;
+    }
+
+    .region {
+        display: flex;
+        flex-direction: row;
+        width: 50%;
+        justify-content: space-between;
+
+        @media (max-width: 600px) {
+            flex-direction: column;
+            justify-content: center;
+            row-gap: 30px;
+            align-items: center;
+        }
     }
 }
